# Valon_Tuner

./: LICENSE  README.md  install.sh  pyproject.toml  tuner_valon.py
systemd/: valon-telem.service  valon-telem.service.template  valon_telem.service.template
valon-telem/: valon_control.py  valon_telem.py
valon-telem-tests-original/: valon_control.py  valon_telem.py
valon_tel/: __init__.py  client_socket.py  server.py  server_class.py  valon_control.py
valon_telem/: install.sh  pyproject.toml
valon_telem/valon_tel/: cli.py  client_socket.py
